# templates

./: LD_LIBRARY_PATH.template
flake-uv/: flake.nix
template-devshell/: README.md  devshell.toml
template-nix-direnv/: README.md  shell.nix
template-nodejs/: README.md  shell.nix
template-nodejs-flake/: flake.nix
template-nodejs/.direnv/: nix-profile-.2217.d02d818f22c7
template-notebook/: shell.nix
template-poetry2nix/: .gitignore  README.md  pyproject.toml
template-poetry2nix-devshell/: README.md  devshell.toml
template-poetry2nix/imageapp/: __init__.py
template-rustup/: README.md
template-venv/: shell-jdg.nix  shell.nix
