[tool.poetry]
name = "imageapp"
version = "0.1.0"
description = ""
authors = ["hcvst <hc@vst.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pillow = "^9.4.0"
flask = "^2.2.2"

[tool.poetry.scripts]
imageapp = 'imageapp:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
